--- a/application.css
+++ b/application.css
@@ -2,13 +2,23 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: "AvenirNext--regular";       
+    src:url("assets/avenir-next/AvenirNextLTPro-Regular.otf")        
+}
+@font-face {
+    font-family: "AvenirNext--bold";       
+    src:url("assets/avenir-next/AvenirNextLTPro-Bold.otf")        
+}
+
 body {
     background-color: #f5f5f5ff;
     --color-frame: #6a7b8bff;
     --color-inner: #bac1c8ff;
-    font-size: 14px;
+    font-size: 18px;
     font-family: "AvenirNext--regular", sans-serif;    
-    letter-spacing: 1px;
+    letter-spacing: 2px;
+    margin: 0;
 }
 
 .link {
@@ -16,75 +26,134 @@ body {
     color: white;
 }
 
-
 header {
     background-color: var(--color-frame);
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
-    padding: 10px;    
+    padding: 15px 50px;    
 }
 
 .header__inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    margin: 0 auto; 
     max-width: 1400px;
-    margin: 0 auto;
+    display: grid;    
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 50px;
+    align-items: center;    
+    justify-content: space-between; 
+}
+
+@media(max-width: 700px) {
+    .header__inner {
+        grid-template-columns: 1fr;        
+        justify-content: center;           
+        margin: 20px auto 0;        
+    }
 }
 
 .header__logo--img {
-    width: 120px;
+    width: 200px; 
+    display: block;
+    margin: 0 auto;       
 }
 
 .header__navList {
-    display: flex; 
+    display: grid; 
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 50px;
     list-style: none;       
     margin: 0;
     padding: 0;
     list-style: none;
+    align-items: center;    
 }
 
-.header__navList--item {
-    margin-left: 50px;
+@media(max-width: 500px) {
+    .header__navList {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        grid-gap: 20px;           
+    }
+}
+
+.header__navList--item {    
+    text-align: center;    
 }
 
 main {
     width: 80%;
     max-width: 1000px;      
+    margin: 0 auto;    
+}
+
+.main__header {
     margin: 0 auto;
 }
 
 .main__header--img {
-    width: 200px;
     display: block;
-    margin: 50px auto;
+    width: 300px;    
+    margin: 0 auto;
+}
+
+@media(max-width: 300px) {
+    .main__header--img {
+        width: 200px;
+    }
+}
+
+.main__invitation {
+    position: relative;      
+}
+
+.main__invitation::before{
+    content: "DÉCOUVREZ NOTRE CAFÉ PHILO";    
+    position: absolute;      
+    display: block;  
+    margin: 50px 0;  
+    width: 100%;
+    text-align: center;
+    font-size: 36px;
+    font-family: "AvenirNext--bold", sans-serif;    
+    color: white;
+    text-shadow: 5px 5px 5px gray;
+}
+
+.main__invitation--img {
+    width: 100%;    
 }
 
 footer {
     background-color: var(--color-frame);
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 10px;   
+    padding: 20px 50px;   
     color: white; 
 }
 
 .footer__inner {
-    display: flex;
-    align-items: center;
-    /* justify-content:space-around; */
-    max-width: 1400px;
     margin: 0 auto;
+    max-width: 1400px;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+}
+
+@media(max-width: 500px) {
+    .footer__inner {
+        grid-template-columns: 1fr;
+        justify-content: center;           
+    }
 }
 
 .footer__logo--img {
-    width: 60px;
-    position: relative;
-    left: 0;
-    margin: 30px 0;
+    width: 70px;    
+    display: block;
+    margin: 0 auto;  
 }
 
 .footer__socialMedia {
@@ -92,20 +161,21 @@ footer {
 }
 
 .footer__socialMedia--header {
-    margin-bottom: 25px;
+    text-align: center;
+    margin: 30px 0;
 }
+
 .footer__socialMediaList {
     display: flex; 
-    list-style: none;       
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    justify-content: space-evenly;
+    list-style: none;  
+    padding: 0;       
 }
 
 .footer__socialMediaList--item {
-    margin-left: 40px;
+    margin-left: 0 auto;
 }
 
 .footer__socialMedia--img {
-    width: 30px;
+    width: 40px;    
 }
