--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,7 @@ body {
     font-family: "AvenirNext--regular", sans-serif;    
     margin: 0;   
     font-size: 22px;    
+    position: relative;
 }
 
 @media(max-width: 600px) {
