--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -1,4 +1,4 @@
-.contact {    
+.contactUs {    
     max-width: 800px;
     margin: 0 auto;
 }
@@ -9,18 +9,18 @@
     }
 }
 
-.contact__cafeName {
+.contactUs__cafeName {
     margin: 0;    
     font-family: "AvenirNext--bold", sans-serif;
 }
 
-.contact__details {
+.contactUs__details {
     display: grid;
     grid-gap: 40px;
     margin: 10px 0;    
 }
 
-.contact__map {
+.contactUs__map {
     display: block; 
     width: 100%;    
     height: 600px;     
@@ -29,7 +29,7 @@
 }
 
 @media(max-width: 600px) {
-    .contact__map {
+    .contactUs__map {
         width: 250px;
         height: 250px;
     }
