--- a/css/about.css
+++ b/css/about.css
@@ -17,9 +17,13 @@
     margin-top: 0;
 }
 
+.about__description {
+    margin: 0 20px;
+}
+
 @media(max-width: 800px) {
     .about__description {
-        margin: 0 20px;
+        margin: 20px;
     }
 }
 
@@ -27,11 +31,11 @@
     width: 400px;        
 }
 .about__img--right {      
-    margin: 0 0 0 50px;
+    margin: 0 0 0 30px;
 }
 
 .about__img--left {    
-    margin: 0 50px 0 0;    
+    margin: 0 30px 0 0;    
 }
 
 @media(max-width: 800px) {
