--- a/css/modal.css
+++ b/css/modal.css
@@ -7,7 +7,7 @@
     top: 50vh;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 80%;    
 
     background-color: white;
     padding: 80px 100px 0;
@@ -16,17 +16,43 @@
     z-index: 10;
 }
 
+@media(max-width: 769px), (max-height: 1000px) {
+    .modal {         
+        padding: 80px 30px 0;   
+    }
+}
+
 .modal__img {
-    width: 100px;
-    display: block;
-    position: absolute;
+    width: 100px;    
+    /* position: absolute;     */
+}
+
+@media(max-width: 769px) {
+    .modal__img {
+        width: 50px;
+        display: block;    
+        margin: 0 auto;        
+    }
 }
 
 .modal__paragraph {    
     font-size: 26px;    
     font-weight: bold;
     max-width: 800px;
-    margin: 100px auto;
+    margin: 50px auto;
+}
+
+@media(max-width: 769px) {
+    .modal__paragraph {
+        font-size: 18px; 
+        text-align: center;      
+    }
+}
+@media(max-width: 380px) {
+    .button--modal {
+        width: 180px;
+        font-size: 16px;
+    }
 }
 
 .overlay {
